--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "@types/styled-components": "^4.1.19",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-infinite-scroller": "^1.2.4",
+    "react-redux": "^7.1.1",
     "react-scripts": "3.2.0",
+    "redux": "^4.0.4",
+    "redux-saga": "^1.1.1",
+    "reselect": "^4.0.0",
     "styled-components": "^4.4.0",
     "typescript": "^3.6.4"
   },
@@ -34,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-redux": "^7.1.5"
   }
 }
