--- a/package.json
+++ b/package.json
@@ -3,15 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "^24.0.19",
+    "@types/jest": "^24.0.20",
     "@types/node": "^12.11.2",
     "@types/react": "^16.9.9",
-    "@types/react-dom": "^16.9.2",
+    "@types/react-dom": "^16.9.3",
+    "@types/react-router-dom": "^5.1.0",
     "@types/styled-components": "^4.1.19",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-infinite-scroller": "^1.2.4",
     "react-redux": "^7.1.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
     "redux-saga": "^1.1.1",
