Add tests to Pokemon Search screen

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/node": "^12.11.2",
     "@types/react": "^16.9.9",
     "@types/react-dom": "^16.9.3",
+    "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.0",
     "@types/styled-components": "^4.1.19",
     "react": "^16.10.2",
@@ -25,7 +26,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -44,6 +45,10 @@
     ]
   },
   "devDependencies": {
-    "@types/react-redux": "^7.1.5"
+    "@types/enzyme": "^3.10.3",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
+    "enzyme-to-json": "^3.4.3",
+    "ts-jest": "^24.1.0"
   }
 }
