--- a/package.json
+++ b/package.json
@@ -3,25 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "^26.0.16",
-    "@types/node": "^14.14.10",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@types/react-redux": "^7.1.11",
-    "@types/react-router-dom": "^5.1.6",
-    "@types/styled-components": "^5.1.4",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "@types/jest": "^27.0.3",
+    "@types/node": "^17.0.4",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-redux": "^7.1.20",
+    "@types/react-router-dom": "^5.3.2",
+    "@types/styled-components": "^5.1.18",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-infinite-scroller": "^1.2.4",
-    "react-redux": "^7.2.2",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
-    "redux": "^4.0.5",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.1",
+    "react-scripts": "5.0.0",
+    "redux": "^4.1.2",
     "redux-saga": "^1.1.3",
-    "redux-thunk": "^2.3.0",
-    "reselect": "^4.0.0",
-    "styled-components": "^5.2.1",
-    "typescript": "^4.1.2"
+    "redux-thunk": "^2.4.1",
+    "reselect": "^4.1.5",
+    "styled-components": "^5.3.3",
+    "typescript": "^4.5.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -45,10 +45,11 @@
     ]
   },
   "devDependencies": {
-    "@types/enzyme": "^3.10.8",
+    "@babel/helper-builder-react-jsx": "^7.16.5",
+    "@types/enzyme": "^3.10.10",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.5",
-    "enzyme-to-json": "^3.6.1",
-    "ts-jest": "^26.4.4"
+    "enzyme-adapter-react-16": "^1.15.6",
+    "enzyme-to-json": "^3.6.2",
+    "ts-jest": "^27.1.2"
   }
 }
