--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.7.1",
     "@types/jest": "^27.0.3",
     "@types/node": "^17.0.4",
     "@types/react": "^17.0.38",
@@ -19,7 +20,6 @@
     "redux": "^4.1.2",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.4.1",
-    "reselect": "^4.1.5",
     "styled-components": "^5.3.3",
     "typescript": "^4.5.4"
   },
