--- a/package.json
+++ b/package.json
@@ -18,19 +18,24 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
-    "redux-saga": "^1.1.3",
-    "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.3",
     "typescript": "^4.5.4"
   },
   "scripts": {
+    "lint:fix": "npm run lint -- --fix",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "jest",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint src"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "react-app",
+    "rules": {
+      "object-curly-spacing": ["error", "always"],
+      "semi": ["error"]
+
+    }
   },
   "browserslist": {
     "production": [
