--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "extends": "react-app",
     "rules": {
       "object-curly-spacing": ["error", "always"],
-      "semi": ["error"]
-
+      "semi": ["error"],
+      "@typescript-eslint/no-unused-vars": ["error"],
+      "quotes": ["error", "single"],
+      "no-multi-spaces": ["error"]
     }
   },
   "browserslist": {
