--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "@types/react-dom": "^17.0.11",
     "@types/react-redux": "^7.1.20",
     "@types/react-router-dom": "^5.3.2",
+    "@types/react-virtualized-auto-sizer": "^1.0.1",
+    "@types/react-window": "^1.8.5",
+    "@types/react-window-infinite-loader": "^1.0.5",
     "@types/styled-components": "^5.1.18",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -17,6 +20,9 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-virtualized-auto-sizer": "^1.0.6",
+    "react-window": "^1.8.6",
+    "react-window-infinite-loader": "^1.0.7",
     "redux": "^4.1.2",
     "styled-components": "^5.3.3",
     "typescript": "^4.5.4"
@@ -32,11 +38,23 @@
   "eslintConfig": {
     "extends": "react-app",
     "rules": {
-      "object-curly-spacing": ["error", "always"],
-      "semi": ["error"],
-      "@typescript-eslint/no-unused-vars": ["error"],
-      "quotes": ["error", "single"],
-      "no-multi-spaces": ["error"]
+      "object-curly-spacing": [
+        "error",
+        "always"
+      ],
+      "semi": [
+        "error"
+      ],
+      "@typescript-eslint/no-unused-vars": [
+        "error"
+      ],
+      "quotes": [
+        "error",
+        "single"
+      ],
+      "no-multi-spaces": [
+        "error"
+      ]
     }
   },
   "browserslist": {
